##################################################
 Revision history for Log::Log4perl
##################################################

1.18 (not yet released)
    *   (ms) Added explanation that categories and loggers are the same
             thing (thanks to Rabbit).
    *   (ms) Fixed t/053Resurrect to work with 5.005_03

1.17 (2008/07/19)
    *   (ms) Fixed test suite to run on Strawberry Perl on Win32.
    *   (ms) Added 'l4p' as a valid prefix in configuration files (equal
             to 'log4j' and 'log4perl' now).

1.16 (2008/05/15)
    *   (ms) Changed appender destruction during cleanup to show warning
             messages thrown by destructors. Previously L4p ignored these
             messages which caused failed DB flushes to go unnoticed with
             the DB appender.
    *   (ms) Added explanation for Log4perl messages during global 
             destruction to FAQ.
    *   (ms) Corrected 'Trapper' listing in FAQ, thanks to Christian Reiber.
    *   (ms) Applied patch by Mitchell Perilstein for 5.005it and the
             two-argument binmode() that 5.005 doesn't support.
             (http://rt.cpan.org/Ticket/Display.html?id=34051)
    *   (ms) Applied patch by Emmanuel Rodriguez (POTYL) doing away with 
             hard-coded line numbers in 024WarnDieCarp.t to make it work
             cpan2rpm for building RPM packages 
             (http://rt.cpan.org/Public/Bug/Display.html?id=35370)
    *   (ms) Fixed recreate_check_interval = 0 bug reported by 
             Bill Moseley.
    *   (ms) Added 'header_text' parameter to the file appender to 
             have it write a header every time it opens (or re-opens)
             a new log file (suggested by Steven Lembark).

1.15 (2008/02/10)
    *   (ms) appender_thresholds_adjust() with a parameter of 0 now
             does nothing (requested by Oliver Koch).
    *   (kg) Added 'defer_connection' to Socket appender so it's more useful
             under Apache.