@@ -6,6 +6,7 @@
     *   (ms) Added explanation that categories and loggers are the same
              thing (thanks to Rabbit).
     *   (ms) Fixed t/053Resurrect to work with 5.005_03
+    *   (ms) Added callback function for init_and_watch()
 
 1.17 (2008/07/19)
     *   (ms) Fixed test suite to run on Strawberry Perl on Win32.
